[gd_scene load_steps=17 format=3 uid="uid://doml7biiq8g2o"]

[ext_resource type="Script" path="res://scripts/menus/option_menu/option_menu.gd" id="1_rumc7"]
[ext_resource type="Texture2D" uid="uid://c8b8irfugbxdj" path="res://assets/backgrounds/Fond Menu 02.svg" id="2_pr80k"]
[ext_resource type="Texture2D" uid="uid://cj3134gnhq33s" path="res://assets/icons/Bouton close@2x.png" id="2_vd677"]
[ext_resource type="Theme" uid="uid://dr31fy67cgji3" path="res://assets/resources/themes/generic.tres" id="3_mxk3u"]
[ext_resource type="Texture2D" uid="uid://b1tevrke0h3pb" path="res://assets/icons/Bouton Musique@2x.png" id="4_jywym"]
[ext_resource type="Texture2D" uid="uid://46ywfvlxmd8c" path="res://assets/icons/noteDeMusiqueCroix.png" id="5_an6v6"]
[ext_resource type="FontFile" uid="uid://ddo3rokwsadq0" path="res://assets/resources/fonts/DotGothic16-Regular.ttf" id="5_o6v5m"]
[ext_resource type="Texture2D" uid="uid://d03x6kldjjybo" path="res://assets/icons/Bouton Sons@2x.png" id="6_168q2"]
[ext_resource type="Texture2D" uid="uid://cbskr3qu6rty8" path="res://assets/icons/speakerCroix.png" id="7_gtwn2"]
[ext_resource type="Texture2D" uid="uid://boj6u1yossbmy" path="res://assets/icons/Bouton Langue@2x.png" id="8_iii62"]
[ext_resource type="Texture2D" uid="uid://btf6mt36qkci8" path="res://assets/icons/Bouton Insta@2x.png" id="9_vb5lp"]
[ext_resource type="Texture2D" uid="uid://deg1h1e2vrdlv" path="res://assets/icons/Bouton X@2x.png" id="10_droxh"]
[ext_resource type="Texture2D" uid="uid://bveg7cn5eocfq" path="res://assets/icons/Bouton Discord@2x.png" id="11_ioidm"]
[ext_resource type="Texture2D" uid="uid://bqaq0yuqwbuxg" path="res://assets/icons/Bouton Annonces@2x.png" id="12_esjhy"]
[ext_resource type="Texture2D" uid="uid://bldo4ujivtl3m" path="res://assets/icons/Bouton Confidentialit√©@2x.png" id="13_gyr4v"]
[ext_resource type="Texture2D" uid="uid://ckx46n5itd1ut" path="res://assets/icons/Bouton Mail@2x.png" id="14_ib5pc"]

[node name="OptionMenu" type="Control"]
texture_filter = 6
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rumc7")

[node name="MenuCenterContainer" type="CenterContainer" parent="."]
texture_filter = 6
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -750.0
offset_top = -525.0
offset_right = 750.0
offset_bottom = 525.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundTextureRect" type="TextureRect" parent="MenuCenterContainer"]
custom_minimum_size = Vector2(1500, 1050)
layout_mode = 2
texture = ExtResource("2_pr80k")
expand_mode = 1

[node name="MenuHBoxContainer" type="HBoxContainer" parent="MenuCenterContainer"]
layout_mode = 2
theme_override_constants/separation = -60

[node name="MenuRowVBoxContainer" type="VBoxContainer" parent="MenuCenterContainer/MenuHBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(1320, 825)
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="ParametersRichTextLabel" type="RichTextLabel" parent="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer"]
layout_mode = 2
theme = ExtResource("3_mxk3u")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("5_o6v5m")
theme_override_font_sizes/normal_font_size = 50
text = "PARAMETERS.TEXT.LABEL"
fit_content = true

[node name="ParametersHBoxContainer" type="HBoxContainer" parent="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="MusicTextureButton" type="TextureButton" parent="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer/ParametersHBoxContainer"]
custom_minimum_size = Vector2(225, 191.25)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("4_jywym")
texture_pressed = ExtResource("5_an6v6")
ignore_texture_size = true
stretch_mode = 0

[node name="SoundTextureButton" type="TextureButton" parent="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer/ParametersHBoxContainer"]
custom_minimum_size = Vector2(225, 191.25)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("6_168q2")
texture_pressed = ExtResource("7_gtwn2")
ignore_texture_size = true
stretch_mode = 0

[node name="LanguageTextureButton" type="TextureButton" parent="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer/ParametersHBoxContainer"]
custom_minimum_size = Vector2(225, 191.25)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("8_iii62")
ignore_texture_size = true
stretch_mode = 0

[node name="SocialsRichTextLabel" type="RichTextLabel" parent="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer"]
layout_mode = 2
theme = ExtResource("3_mxk3u")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("5_o6v5m")
theme_override_font_sizes/normal_font_size = 50
text = "SOCIALS.TEXT.LABEL"
fit_content = true

[node name="SocialsHBoxContainer" type="HBoxContainer" parent="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="InstagramTextureButton" type="TextureButton" parent="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer/SocialsHBoxContainer"]
custom_minimum_size = Vector2(225, 191.25)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("9_vb5lp")
ignore_texture_size = true
stretch_mode = 0

[node name="XTextureButton" type="TextureButton" parent="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer/SocialsHBoxContainer"]
custom_minimum_size = Vector2(225, 191.25)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("10_droxh")
ignore_texture_size = true
stretch_mode = 0

[node name="DiscordTextureButton" type="TextureButton" parent="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer/SocialsHBoxContainer"]
custom_minimum_size = Vector2(225, 191.25)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("11_ioidm")
ignore_texture_size = true
stretch_mode = 0

[node name="MiscRichTextLabel" type="RichTextLabel" parent="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer"]
layout_mode = 2
theme = ExtResource("3_mxk3u")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("5_o6v5m")
theme_override_font_sizes/normal_font_size = 50
text = "MISC.TEXT.LABEL"
fit_content = true

[node name="MiscHBoxContainer" type="HBoxContainer" parent="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="UpdateTextureButton" type="TextureButton" parent="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer/MiscHBoxContainer"]
custom_minimum_size = Vector2(225, 191.25)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("12_esjhy")
ignore_texture_size = true
stretch_mode = 0

[node name="RgpdTextureButton" type="TextureButton" parent="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer/MiscHBoxContainer"]
custom_minimum_size = Vector2(225, 191.25)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("13_gyr4v")
ignore_texture_size = true
stretch_mode = 0

[node name="ContactTextureButton" type="TextureButton" parent="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer/MiscHBoxContainer"]
custom_minimum_size = Vector2(225, 191.25)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("14_ib5pc")
ignore_texture_size = true
stretch_mode = 0

[node name="CloseMarginContainer" type="MarginContainer" parent="MenuCenterContainer/MenuHBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 825

[node name="CloseTextureButton" type="TextureButton" parent="MenuCenterContainer/MenuHBoxContainer/CloseMarginContainer"]
custom_minimum_size = Vector2(141, 141)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_vd677")
stretch_mode = 0

[connection signal="pressed" from="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer/ParametersHBoxContainer/MusicTextureButton" to="." method="_on_music_texture_button_pressed"]
[connection signal="pressed" from="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer/ParametersHBoxContainer/SoundTextureButton" to="." method="_on_sound_texture_button_pressed"]
[connection signal="pressed" from="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer/ParametersHBoxContainer/LanguageTextureButton" to="." method="_on_language_texture_button_pressed"]
[connection signal="pressed" from="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer/SocialsHBoxContainer/InstagramTextureButton" to="." method="_on_instagram_texture_button_pressed"]
[connection signal="pressed" from="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer/SocialsHBoxContainer/XTextureButton" to="." method="_on_x_texture_button_pressed"]
[connection signal="pressed" from="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer/SocialsHBoxContainer/DiscordTextureButton" to="." method="_on_discord_texture_button_pressed"]
[connection signal="pressed" from="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer/MiscHBoxContainer/UpdateTextureButton" to="." method="_on_update_texture_button_pressed"]
[connection signal="pressed" from="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer/MiscHBoxContainer/RgpdTextureButton" to="." method="_on_rgpd_texture_button_pressed"]
[connection signal="pressed" from="MenuCenterContainer/MenuHBoxContainer/MenuRowVBoxContainer/MiscHBoxContainer/ContactTextureButton" to="." method="_on_contact_texture_button_pressed"]
[connection signal="pressed" from="MenuCenterContainer/MenuHBoxContainer/CloseMarginContainer/CloseTextureButton" to="." method="_on_close_texture_button_pressed"]
